# el

./: .gitignore
cln-router/: Cargo.toml
cln-router/abi/: Router.json
cln-router/src/: hooks.rs  lib.rs  main.rs  model.rs  rpc.rs  worker.rs
frontend/: .env  .eslintrc.cjs  Dockerfile  build.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/fonts/: fonts.css
frontend/src/: App.tsx  main.tsx
frontend/src/pages/home-page/: home-page.tsx
frontend/src/pages/not-found/: not-found.module.scss  not-found.tsx
frontend/src/router/: router.tsx
frontend/src/services/: base-api.ts  selectors.ts  store.ts
frontend/src/services/alby/: alby.service.ts  alby.slice.ts  index.ts
frontend/src/services/app/: app.slice.ts  index.ts
frontend/src/services/contract/: contract-service.ts  erc20-abi.tsx  htlc-erc20-abi.tsx  index.ts
frontend/src/services/htlc/: htlc.service.ts  htlc.slice.ts  htlc.types.ts  index.ts
frontend/src/services/market/: index.ts  market.service.ts  market.types.ts
frontend/src/services/meta-mask/: index.ts  meta-mask.service.ts  meta-mask.slice.ts
frontend/src/styles/: Connect.module.css  Route.module.css  _boilerplate.scss  _colors.scss  _typography.scss  styles.scss
solidity/router/: deploy.sh  hardhat.config.js  package-lock.json  package.json
solidity/router/contracts/: Router.sol
solidity/router/scripts/: deploy.js
solidity/token/: hardhat.config.js  package-lock.json  package.json
solidity/token/contracts/: ELToken.sol  VBTC.sol
solidity/token/scripts/: deploy.js  mint.js
(+91 files in other folders)
