[package]
name = "cln-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic CLN plugin
cln-rpc = "0.1.4"
cln-plugin = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "fs","sync","rt-multi-thread",]}
parking_lot = "0.12"
anyhow = "1"
log = "0.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }

# EVM stuff
ethers = { features = ["abigen", "ws", "rustls"] }

# fix
openssl = { version = "0.10.59", features = ["vendored"] }
